samples/_failures_safe/1761553030_ce8039_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fdf6119.c: In function ‘main’:
./samples/SAFE/__tmp_0fdf6119.c:173:5: error: expected declaration or statement at end of input
  173 |     for (int i = 0; i < token_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_0fdf6119.c:173:5: error: expected declaration or statement at end of input
